--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,7 @@
     -->
 
     <!-- fonts -->
-    <%= require('!!raw-loader!./fonts-preload.g.html') %>
+    <%= require('!!raw-loader!./fonts-preload.g.html').default %>
     <link rel="stylesheet" href="fonts.g.css" />
 
     <title>React App</title>
